fixed grid spacing

--- a/src/scss/home.css
+++ b/src/scss/home.css
@@ -22,8 +22,8 @@ h1 {
   -ms-grid-column-span: 1;
   grid-column: 1 / 2;
   -ms-grid-row: 1;
-  -ms-grid-row-span: 5;
-  grid-row: 1 / 6;
+  -ms-grid-row-span: 6;
+  grid-row: 1 / 7;
   height: 100vh;
   border: 2px solid rgba(185, 185, 185, 0.432);
   overflow-y: scroll;
